# trivox-conductor

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
src/trivox_conductor/: app.py  cli.py  pipelines.yml  profiles.yml
src/trivox_conductor/common/: base_command.py  base_processor.py  logger.py  module_loader.py
src/trivox_conductor/common/commands/: __init__.py  argument_type.py  base_command.py  base_command_processor.py  cli_app.py  exceptions.py  registry.py
src/trivox_conductor/common/dynamic_loader/: __init__.py  base_loader.py  dynamic_loader.py  utils.py
src/trivox_conductor/common/logging/: __init__.py  configuration_validation.py  log_subscriber.py  logger_utils.py
src/trivox_conductor/common/logging/filters/: __init__.py  ensure_classname.py
src/trivox_conductor/common/logging/formatters/: __init__.py  console_color_formatter.py  html_formatter.py
src/trivox_conductor/common/logging/handlers/: __init__.py  console_stream.py  qtext_edit_logger.py  socket_handler.py
src/trivox_conductor/common/logging/specs/: formatter_spec.py  handler_spec.py  logger_spec.py  logging_spec.py  root_spec.py  (+1 more)
src/trivox_conductor/common/registry/: __init__.py  endpoint_registry.py
src/trivox_conductor/common/settings/: __init__.py  base_settings.py  setting_manager.py  setting_merger.py  settings.py  settings_registry.py
src/trivox_conductor/common/utils/: paths.py
src/trivox_conductor/constants/: __init__.py  app_constants.py  loader_constants.py
src/trivox_conductor/core/bootstrap/: __init__.py  loaders.py
src/trivox_conductor/core/contracts/: ai.py  base_contract.py  capabilities.py  capture.py  color.py  mux.py  notifier.py  uploader.py  watcher.py
src/trivox_conductor/core/events/: bus.py  topics.py
src/trivox_conductor/core/jobs/: orchestrator.py  pipelines.py  types.py
src/trivox_conductor/core/manifests/: manifest_observer.py  manifest_service.py  v1_schema.json  v2_schema.json
src/trivox_conductor/core/observers/: base_observer.py  bootstrap.py  notifications.py  notifications_observer.py  observers_loader.py  observers_registry.py  watcher_autostart.py  watcher_autostart_observer.py
src/trivox_conductor/core/preflights/: preflight_engine.py  preflight_registry.py  preflight_types.py
src/trivox_conductor/core/profiles/: __init__.py  profile_injector.py  profile_manager.py  profile_models.py
src/trivox_conductor/core/registry/: __init__.py  ai_registry.py  base_loader.py  capture_registry.py  color_registry.py  mux_registry.py  notifier_registry.py  role_registries.py  uploader_registry.py  watcher_registry.py
src/trivox_conductor/core/services/: base_service.py
src/trivox_conductor/core/session/: session_manager.py
src/trivox_conductor/core/ui/: nav_registry.py
src/trivox_conductor/modules/ai/: __init__.py  commands.py  processors.py  services.py  settings.py
src/trivox_conductor/modules/capture/: __init__.py  commands.py  preflight.py  preflights.py  processors.py  services.py  settings.py  state.py  state_store.py  ui.py
src/trivox_conductor/modules/color/: __init__.py  commands.py  processors.py  services.py  settings.py
src/trivox_conductor/modules/handoff/: __init__.py  commands.py  processors.py  services.py  settings.py
src/trivox_conductor/modules/manifest/: __init__.py  reader.py  writer.py
src/trivox_conductor/modules/mux/: __init__.py  commands.py  offset_math.py  processors.py  services.py  settings.py
src/trivox_conductor/modules/replay/: __init__.py  commands.py  processors.py  services.py  settings.py
src/trivox_conductor/modules/watcher/: __init__.py  commands.py  correlate.py  processors.py  services.py  settings.py
src/trivox_conductor/plugins/capture_obs/: __init__.py  adapter.py  plugin.yaml  preflights.py
src/trivox_conductor/plugins/capture_obs_replaymod/: adapter.py  plugin.yaml
src/trivox_conductor/plugins/watcher_replay/: adapter.py  plugin.yaml
src/trivox_conductor/ui/: __init__.py  app.py
src/trivox_conductor/ui/common/: base_window_controller.py  base_window_view.py  controllers_mediator.py
src/trivox_conductor/ui/controllers/: main_window_controller.py
src/trivox_conductor/ui/qt/: compile.bat
src/trivox_conductor/ui/views/: main_window_view.py
(+5 files in other folders)
